--- a/Введение в машинное обучение с помощью Python/1). Классификация сортов ириса.ipynb
+++ b/Введение в машинное обучение с помощью Python/1). Классификация сортов ириса.ipynb
@@ -17,8 +17,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19cb938",
-   "metadata": {},
+   "id": "5ae2d74a",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Загружаем данные"
    ]
@@ -27,7 +29,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "2cd81b90",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_iris\n",
@@ -37,8 +41,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3b22a5a",
-   "metadata": {},
+   "id": "1209643f",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Обучающий и тестовый наборы"
    ]
@@ -47,7 +53,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "67256e18",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# train_test_split перемешивает набор данных и разбивает его на 2 части\n",
@@ -64,6 +72,7 @@
    "execution_count": 4,
    "id": "e6061f12",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -89,8 +98,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6b75c41",
-   "metadata": {},
+   "id": "f8cdfde0",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Визуализируем данные"
    ]
@@ -100,6 +111,7 @@
    "execution_count": 5,
    "id": "61932b61",
    "metadata": {
+    "hidden": true,
     "hide_input": false,
     "scrolled": false
    },
@@ -156,7 +168,9 @@
   {
    "cell_type": "markdown",
    "id": "5bfad923",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Строим первую модель"
    ]
@@ -165,7 +179,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "94c1c78a",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# берем модель k ближайших соседей с k = 1\n",
@@ -178,7 +194,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "c9ceef52",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -198,8 +216,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df5ba206",
-   "metadata": {},
+   "id": "0e3ec899",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Получение прогнозов"
    ]
@@ -208,7 +228,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "02da77bc",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -235,7 +257,9 @@
   {
    "cell_type": "markdown",
    "id": "9078b0f3",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Оценим качество модели"
    ]
@@ -243,7 +267,9 @@
   {
    "cell_type": "markdown",
    "id": "18ddd374",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- метод $score$ вычисляет правильность модели для тестового/тренировочного набора:"
    ]
@@ -253,6 +279,7 @@
    "execution_count": 9,
    "id": "084fc1c3",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -272,8 +299,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdfbee60",
+   "id": "510fba13",
    "metadata": {
+    "heading_collapsed": true,
     "hide_input": true
    },
    "source": [
@@ -284,6 +312,7 @@
    "cell_type": "markdown",
    "id": "67a8a348",
    "metadata": {
+    "hidden": true,
     "hide_input": true
    },
    "source": [
@@ -294,7 +323,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "c84d571f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -317,7 +348,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "c42e426c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
