--- a/Введение в машинное обучение с помощью Python/2). Методы машинного обучения с учителем.ipynb
+++ b/Введение в машинное обучение с помощью Python/2). Методы машинного обучения с учителем.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c907fcf3",
+   "id": "8a9fd197",
    "metadata": {},
    "source": [
     "# Классификация и регрессия"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93e1ac5f",
+   "id": "e5e0e7ec",
    "metadata": {},
    "source": [
     "Есть два основные задачи машинного обучения с учителем:\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20d9f164",
+   "id": "568efbc5",
    "metadata": {},
    "source": [
     "- Цель классификации состоит в том, чтобы спрогнозировать метку\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d62add",
+   "id": "034621aa",
    "metadata": {},
    "source": [
     "- Цель регрессии состоит в том, чтобы спрогнозировать непрерывное\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47d4c5a6",
+   "id": "7e2a3aa9",
    "metadata": {},
    "source": [
     "# Обобщающая способность, переобучение и недообучение"
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4b76d13",
+   "id": "0340ca83",
    "metadata": {},
    "source": [
     "- В машинном обучении с учителем нам нужно построить модель на\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c248f1dc",
+   "id": "d51d1cda",
    "metadata": {},
    "source": [
     "- Построение модели, которая\n",
@@ -110,7 +110,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "aa9ab0c5",
+   "id": "0bbb0a63",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a61b575f",
+   "id": "d42ec1e5",
    "metadata": {},
    "source": [
     "## Взаимосвязь между сложностью модели и размером набора данных"
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0edcdb4",
+   "id": "e22d81bc",
    "metadata": {},
    "source": [
     "Важно отметить, что сложность модели тесно связана с изменчивостью\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb78ad99",
+   "id": "e2551edd",
    "metadata": {},
    "source": [
     "# Алгоритмы машинного обучения с учителем"
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "250096d1",
+   "id": "c1ce2038",
    "metadata": {},
    "source": [
     "## Некоторые наборы данных"
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0a81cc6e",
+   "id": "7457aa4f",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a717600",
+   "id": "1b7d24a3",
    "metadata": {},
    "source": [
     "Мы\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "490e5a5b",
+   "id": "fc9284e0",
    "metadata": {},
    "source": [
     "## Метод k ближайших соседей"
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ef3dc99",
+   "id": "880cfa44",
    "metadata": {},
    "source": [
     "Алгоритм k ближайших соседей, возможно, является самым простым\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70e3a5de",
+   "id": "bcb5a261",
    "metadata": {},
    "source": [
     "### Классификация с помощью k соседей"
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "329effd2",
+   "id": "cfbf1b34",
    "metadata": {},
    "source": [
     "Рис. 2.4 Прогнозы, полученные для набора данных forge\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53274259",
+   "id": "3f51ccd6",
    "metadata": {},
    "source": [
     "Когда мы\n",
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a4328008",
+   "id": "24c6eab6",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "968b05b7",
+   "id": "3dbfe619",
    "metadata": {},
    "source": [
     "Рис. 2.5 Прогнозы, полученные для набора данных forge\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fec02c9b",
+   "id": "2644c408",
    "metadata": {},
    "source": [
     "### Анализ работы класса KNeighborsClassifier"
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d555ff2",
+   "id": "279ec652",
    "metadata": {},
    "source": [
     "Рис. 2.6 Границы принятия решений, созданные моделью\n",
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cabce8fc",
+   "id": "42a9fbf5",
    "metadata": {},
    "source": [
     "Рис. 2.7 Сравнение правильности на обучающем и тестовом наборах\n",
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdde6e79",
+   "id": "3dbc10f2",
    "metadata": {},
    "source": [
     "Правильность на\n",
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2926c53",
+   "id": "0c54af9d",
    "metadata": {},
    "source": [
     "Рис. 2.8 Прогнозы, полученные с помощью регрессионной модели\n",
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adbb2fc1",
+   "id": "58439892",
    "metadata": {},
    "source": [
     "Рис. 2.8 Прогнозы, полученные с помощью регрессионной модели\n",
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db1808e",
+   "id": "a2168cfa",
    "metadata": {},
    "source": [
     "Рис. 2.10 Сравнение прогнозов, полученных с помощью регрессии ближайших\n",
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c59ca43",
+   "id": "c61f84fd",
    "metadata": {},
    "source": [
     "Линейная регрессия или обычный метод наименьших квадратов\n",
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1394381",
+   "id": "21b7a58c",
    "metadata": {},
    "source": [
     "Рис. 2.13 Кривые обучения гребневой регрессии и\n",
@@ -1662,165 +1662,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 102,
    "id": "070a083d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.90107158e-02 9.80989284e-01]\n",
-      " [9.98084545e-01 1.91545508e-03]\n",
-      " [1.75588679e-01 8.24411321e-01]\n",
-      " [2.26168903e-01 7.73831097e-01]\n",
-      " [1.95542687e-01 8.04457313e-01]\n",
-      " [9.99998866e-01 1.13359649e-06]\n",
-      " [9.28965901e-01 7.10340990e-02]\n",
-      " [9.99906255e-01 9.37445554e-05]\n",
-      " [8.32363066e-01 1.67636934e-01]\n",
-      " [8.40527981e-04 9.99159472e-01]\n",
-      " [4.84410758e-01 5.15589242e-01]\n",
-      " [1.51112403e-03 9.98488876e-01]\n",
-      " [9.99994678e-01 5.32214616e-06]\n",
-      " [9.99996880e-01 3.12013505e-06]\n",
-      " [2.91158533e-02 9.70884147e-01]\n",
-      " [2.90192474e-04 9.99709808e-01]\n",
-      " [9.99999990e-01 9.96802645e-09]\n",
-      " [8.63672484e-01 1.36327516e-01]\n",
-      " [2.17374670e-02 9.78262533e-01]\n",
-      " [1.62702474e-03 9.98372975e-01]\n",
-      " [9.99986836e-01 1.31636763e-05]\n",
-      " [9.95281990e-01 4.71801012e-03]\n",
-      " [1.96343208e-02 9.80365679e-01]\n",
-      " [4.82888548e-04 9.99517111e-01]\n",
-      " [2.33546316e-04 9.99766454e-01]\n",
-      " [6.44386332e-03 9.93556137e-01]\n",
-      " [4.72296647e-05 9.99952770e-01]\n",
-      " [1.58714872e-04 9.99841285e-01]\n",
-      " [5.36884753e-02 9.46311525e-01]\n",
-      " [9.99999274e-01 7.26038560e-07]\n",
-      " [3.18541302e-03 9.96814587e-01]\n",
-      " [3.61147147e-02 9.63885285e-01]\n",
-      " [7.14484359e-02 9.28551564e-01]\n",
-      " [4.20214755e-03 9.95797852e-01]\n",
-      " [6.23793337e-04 9.99376207e-01]\n",
-      " [4.11336107e-04 9.99588664e-01]\n",
-      " [4.54736622e-03 9.95452634e-01]\n",
-      " [1.27143098e-02 9.87285690e-01]\n",
-      " [9.99999998e-01 2.30954404e-09]\n",
-      " [7.52490108e-06 9.99992475e-01]\n",
-      " [1.00000000e+00 5.35587920e-13]\n",
-      " [3.52226657e-04 9.99647773e-01]\n",
-      " [9.99979534e-01 2.04660052e-05]\n",
-      " [6.79939725e-02 9.32006027e-01]\n",
-      " [5.71296670e-02 9.42870333e-01]\n",
-      " [8.27031392e-05 9.99917297e-01]\n",
-      " [9.96783503e-01 3.21649722e-03]\n",
-      " [1.97592170e-03 9.98024078e-01]\n",
-      " [9.83681751e-01 1.63182487e-02]\n",
-      " [3.47452895e-02 9.65254711e-01]\n",
-      " [4.06654863e-02 9.59334514e-01]\n",
-      " [2.51250006e-03 9.97487500e-01]\n",
-      " [4.20732489e-05 9.99957927e-01]\n",
-      " [9.99994529e-01 5.47111391e-06]\n",
-      " [5.14585397e-02 9.48541460e-01]\n",
-      " [1.44136286e-01 8.55863714e-01]\n",
-      " [5.35250841e-05 9.99946475e-01]\n",
-      " [9.99999515e-01 4.85497541e-07]\n",
-      " [9.99999999e-01 1.00979622e-09]\n",
-      " [1.00000000e+00 3.36780491e-10]\n",
-      " [3.68934443e-03 9.96310656e-01]\n",
-      " [9.99999599e-01 4.00950671e-07]\n",
-      " [3.02206099e-01 6.97793901e-01]\n",
-      " [1.00000000e+00 2.47088476e-13]\n",
-      " [1.16477239e-02 9.88352276e-01]\n",
-      " [4.67073828e-03 9.95329262e-01]\n",
-      " [1.00000000e+00 3.18125765e-11]\n",
-      " [1.54452832e-02 9.84554717e-01]\n",
-      " [3.68304573e-03 9.96316954e-01]\n",
-      " [8.22667347e-04 9.99177333e-01]\n",
-      " [6.11987920e-04 9.99388012e-01]\n",
-      " [1.97674930e-02 9.80232507e-01]\n",
-      " [2.74435460e-03 9.97255645e-01]\n",
-      " [9.68137269e-04 9.99031863e-01]\n",
-      " [2.28863168e-04 9.99771137e-01]\n",
-      " [9.99664762e-01 3.35237655e-04]\n",
-      " [9.99311184e-01 6.88816116e-04]\n",
-      " [9.99939830e-01 6.01704110e-05]\n",
-      " [1.00000000e+00 6.43105193e-36]\n",
-      " [7.36335325e-06 9.99992637e-01]\n",
-      " [6.02490553e-03 9.93975094e-01]\n",
-      " [6.02881038e-05 9.99939712e-01]\n",
-      " [9.07653618e-02 9.09234638e-01]\n",
-      " [1.09935628e-02 9.89006437e-01]\n",
-      " [9.99999995e-01 4.68273777e-09]\n",
-      " [9.18515986e-03 9.90814840e-01]\n",
-      " [9.64002225e-01 3.59977754e-02]\n",
-      " [5.89501741e-04 9.99410498e-01]\n",
-      " [5.17532806e-02 9.48246719e-01]\n",
-      " [8.73978633e-06 9.99991260e-01]\n",
-      " [2.12098152e-03 9.97879018e-01]\n",
-      " [9.99998912e-01 1.08763974e-06]\n",
-      " [3.39328352e-01 6.60671648e-01]\n",
-      " [1.31846387e-04 9.99868154e-01]\n",
-      " [6.22131765e-01 3.77868235e-01]\n",
-      " [1.00000000e+00 5.20838656e-14]\n",
-      " [9.99998950e-01 1.05014463e-06]\n",
-      " [2.47773819e-03 9.97522262e-01]\n",
-      " [9.97200378e-01 2.79962229e-03]\n",
-      " [2.59335161e-05 9.99974066e-01]\n",
-      " [9.97808641e-01 2.19135899e-03]\n",
-      " [1.00000000e+00 6.36165336e-13]\n",
-      " [9.99980340e-01 1.96603533e-05]\n",
-      " [5.90602549e-04 9.99409397e-01]\n",
-      " [3.38085895e-02 9.66191411e-01]\n",
-      " [9.94790874e-01 5.20912578e-03]\n",
-      " [1.12341632e-01 8.87658368e-01]\n",
-      " [1.21809315e-03 9.98781907e-01]\n",
-      " [9.99999981e-01 1.85594469e-08]\n",
-      " [7.57862296e-04 9.99242138e-01]\n",
-      " [9.99113458e-01 8.86541807e-04]\n",
-      " [7.22230166e-01 2.77769834e-01]\n",
-      " [1.74191513e-03 9.98258085e-01]\n",
-      " [2.91030888e-01 7.08969112e-01]\n",
-      " [9.77110780e-02 9.02288922e-01]\n",
-      " [9.94106772e-01 5.89322807e-03]\n",
-      " [1.28938764e-01 8.71061236e-01]\n",
-      " [9.64425050e-03 9.90355749e-01]\n",
-      " [4.29859979e-01 5.70140021e-01]\n",
-      " [9.87999008e-01 1.20009925e-02]\n",
-      " [4.90180152e-04 9.99509820e-01]\n",
-      " [1.34387269e-02 9.86561273e-01]\n",
-      " [1.00000000e+00 6.08698138e-11]\n",
-      " [1.64908524e-04 9.99835091e-01]\n",
-      " [9.39453144e-01 6.05468555e-02]\n",
-      " [1.48917570e-02 9.85108243e-01]\n",
-      " [7.30132051e-03 9.92698679e-01]\n",
-      " [9.99999999e-01 1.21797584e-09]\n",
-      " [4.09949305e-04 9.99590051e-01]\n",
-      " [1.16355235e-03 9.98836448e-01]\n",
-      " [1.58642776e-01 8.41357224e-01]\n",
-      " [8.44446850e-03 9.91555532e-01]\n",
-      " [8.03596037e-04 9.99196404e-01]\n",
-      " [6.62541533e-01 3.37458467e-01]\n",
-      " [9.99997272e-01 2.72809905e-06]\n",
-      " [2.96951996e-01 7.03048004e-01]\n",
-      " [9.16803121e-05 9.99908320e-01]\n",
-      " [1.00870754e-02 9.89912925e-01]\n",
-      " [3.86347293e-01 6.13652707e-01]\n",
-      " [1.72173326e-03 9.98278267e-01]\n",
-      " [8.02113352e-04 9.99197887e-01]\n",
-      " [7.54855314e-03 9.92451447e-01]\n",
-      " [2.73448282e-04 9.99726552e-01]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Функция predict_proba показывает для каждого элемента какова вероятность\n",
     "# быть отнесенным к каждому из двух классов\n",
-    "lr_proba_predictions = logreg.predict_proba(X_test)\n",
-    "print(lr_proba_predictions)"
+    "# lr_proba_predictions = logreg.predict_proba(X_test)\n",
+    "# print(lr_proba_predictions)"
    ]
   },
   {
@@ -5777,7 +5627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b04836bb",
+   "id": "bc4fe618",
    "metadata": {},
    "source": [
     "Рис. 2.55 Граница принятия решений (слева) и решающая функция (справа)\n",
@@ -5936,7 +5786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8161d50",
+   "id": "760e5443",
    "metadata": {},
    "source": [
     "Рис. 2.56 Граница принятия решений (слева) спрогнозированные вероятности для\n",
